// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Label test on web renders VideoLabel with an explicit title 1`] = `
<div>
  <div>
    <svg
      height={8}
      viewBox="0.15463916957378387 0.049614034593105316 23.59917640686035 13.728596687316895"
      width={13.76}
    >
      <rect
        fill="#008347"
        height="13.5721404"
        width="15.4550103"
        x="0.154639175"
        y="0.139754386"
      />
      <polygon
        fill="#008347"
        points="16.3405361 4.14989474 16.3405361 9.66442105 22.0216082 12.8146667 22.0216082 0.999894737"
      />
      <polygon
        fill="#008347"
        points="23.7538144 0.0496140351 22.7616495 0.643508772 22.7616495 13.1902105 23.7538144 13.7782105"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "color": "rgba(0,131,71,1)",
      }
    }
  >
    SWIMMING
  </div>
</div>
`;

exports[`Video Label test on web renders VideoLabel without an explicit title 1`] = `
<div>
  <div>
    <svg
      height={8}
      viewBox="0.15463916957378387 0.049614034593105316 23.59917640686035 13.728596687316895"
      width={13.76}
    >
      <rect
        fill="#008347"
        height="13.5721404"
        width="15.4550103"
        x="0.154639175"
        y="0.139754386"
      />
      <polygon
        fill="#008347"
        points="16.3405361 4.14989474 16.3405361 9.66442105 22.0216082 12.8146667 22.0216082 0.999894737"
      />
      <polygon
        fill="#008347"
        points="23.7538144 0.0496140351 22.7616495 0.643508772 22.7616495 13.1902105 23.7538144 13.7782105"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "color": "rgba(0,131,71,1)",
      }
    }
  >
    VIDEO
  </div>
</div>
`;
